--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
-    <title>Main.info,Tanishq</title>
+    <title>web-dev-community-official-site</title>
     <link rel="stylesheet" href="DigineCss/styls.css">
 </head>
 <body>
