--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
     <title>web-dev-community-official-site</title>
-    <link rel="stylesheet" href="DigineCss/styls.css">
+    <link rel="stylesheet" href="styls.css">
 </head>
 <body>
     <div class="background"></div>
